Fixato il flicker a caricamento pagina utilizzando v-cloak

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     font-family: sans-serif;
 }
 
+
 body {
     background: #333;
 }
@@ -12,6 +13,10 @@ body {
     max-width: 992px;
     margin: auto;
     color: white;
+}
+
+.container[v-cloak] {
+    display: none;
 }
 
 .search-container {
